<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="225dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dip"
        android:src="@drawable/lovastech" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dip"
        android:layout_marginTop="20dip"
        android:fontFamily="@font/poppins"
        android:text="@string/about_text"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginStart="20dip"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/poppins"
        android:text="@string/name1_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_marginStart="20dip"
        android:fontFamily="@font/poppins"
        android:text="@string/matrics1_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView6"
        android:layout_marginStart="20dip"
        android:layout_marginTop="5dip"
        android:fontFamily="@font/poppins"
        android:text="@string/name2_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView7"
        android:layout_marginStart="20dip"
        android:fontFamily="@font/poppins"
        android:text="@string/matrics2_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginStart="20dip"
        android:layout_marginTop="1dip"
        android:fontFamily="@font/poppins"
        android:text="@string/class_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_marginStart="20dip"
        android:layout_marginTop="1dip"
        android:fontFamily="@font/poppins"
        android:text="@string/programme_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView10"
        android:layout_marginStart="20dip"
        android:layout_marginTop="20dip"
        android:layout_marginEnd="20dip"
        android:fontFamily="@font/poppins"
        android:text="@string/hyperlink"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView11"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dip"
        android:fontFamily="@font/poppins"
        android:text="@string/copyright"
        android:textColor="#000000"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginStart="20dip"
        android:layout_marginTop="50dip"
        android:fontFamily="@font/poppins"
        android:text="@string/developer"
        android:textColor="#E91E63" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView8"
        android:layout_marginStart="20dip"
        android:layout_marginTop="20dip"
        android:fontFamily="@font/poppins"
        android:text="@string/class_name"
        android:textColor="#E91E63" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView9"
        android:layout_marginStart="20dip"
        android:layout_marginTop="20dip"
        android:fontFamily="@font/poppins"
        android:text="@string/programme_name"
        android:textColor="#E91E63" />

</RelativeLayout>